Prevent word breaks in very long lines
Since word breaks are not shown with a hyphen, this behaviour leads to a
sloppy-looking CV.

--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ ul.courses li:hover {
     .header-left {
         float: left;
         width: 70%;
-        word-break: break-all;
+        word-break: normal;
     }
 
     .section header .date {
